[package]
name = "savoy"
version = "0.1.0"
authors = ["Jeremy Jackson <git@jeremyvii.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3"
fundsp = "0.6.4"
wmidi = "4.0.6"

[lib]
name = "savoy"
crate-type = ["cdylib"]
